--- a/training.ipynb
+++ b/training.ipynb
@@ -39,7 +39,8 @@
     "import face_recognition\n",
     "import os\n",
     "import pickle\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "import csv"
    ]
   },
   {
@@ -204,35 +205,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def markAttendance(name, date):\n",
-    "    file_name = f'Attendance_{date}.csv'\n",
-    "\n",
-    "    # Check if the CSV file for the current day exists, create it if not\n",
+    "def markAttendance(name,date):\n",
+    "    file_name = f'Attendance_Folder/Attendance_{date}.csv'\n",
     "    if not os.path.exists(file_name):\n",
     "        with open(file_name, 'w', newline='') as f:\n",
     "            writer = csv.writer(f)\n",
     "            writer.writerow(['Name', 'Timestamp'])\n",
     "\n",
-    "    # Append attendance data to the CSV file\n",
-    "    with open(file_name, 'a', newline='') as f:\n",
-    "        writer = csv.writer(f)\n",
-    "        now = datetime.now()\n",
-    "        dtString = now.strftime('%H:%M:%S')\n",
-    "        writer.writerow([name, dtString])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def markAttendance(name):\n",
-    "    with open('Attendance.csv', 'r+') as f:\n",
+    "    with open(file_name, 'r+') as f:\n",
     "        myDataList = f.readlines()\n",
     "        nameList = []\n",
     "\n",
@@ -254,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -262,22 +246,10 @@
      "output_type": "stream",
      "text": [
       "POPEYE\n",
-      "DOROTHI\n",
-      "DOROTHI\n",
-      "DOROTHI\n",
-      "DOROTHI\n",
-      "DOROTHI\n",
-      "DOROTHI\n",
-      "DOROTHI\n",
-      "DOROTHI\n",
-      "DOROTHI\n",
-      "DOROTHI\n",
-      "DOROTHI\n",
-      "DOROTHI\n",
-      "DOROTHI\n",
-      "DOROTHI\n",
-      "DOROTHI\n",
-      "DOROTHI\n"
+      "POPEYE\n",
+      "POPEYE\n",
+      "POPEYE\n",
+      "POPEYE\n"
      ]
     }
    ],
@@ -299,18 +271,18 @@
     "        # print(faceDis)\n",
     "\n",
     "        matchIndex = np.argmin(faceDis)\n",
-    "\n",
+    "            \n",
     "        if matches[matchIndex]:\n",
     "            name = classNames[matchIndex].upper()\n",
     "            print(name)\n",
     "            y1, x2, y2, x1 = faceLoc\n",
-    "            y1, x2, y2, x1 = y1 * 4, x2 * 4, y2 * 4, x1 * 4 \n",
+    "            y1, x2, y2, x1 = y1 * 4, x2 * 4, y2 * 4, x1 * 4\n",
     "\n",
-    "            # print(x1,x2)\n",
-    "            # cv2.rectangle(img,(x1,y1),(x2,y2),(0,255,0),2)\n",
-    "            # cv2.rectangle(img,(x1,y2-35),(x2,y2),(0,255,0),cv2.FILLED)\n",
-    "            # cv2.putText(img,name,(x1+6,y2-6), cv2.FONT_HERSHEY_COMPLEX,1,(255,255,255),2)\n",
-    "            markAttendance(name)\n",
+    "            cv2.rectangle(img, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
+    "            cv2.rectangle(img, (x1, y2 - 35), (x2, y2), (0, 255, 0), cv2.FILLED)\n",
+    "            cv2.putText(img, name, (x1 + 6, y2 - 6), cv2.FONT_HERSHEY_COMPLEX, 1, (255, 255, 255), 2)\n",
+    "            current_date = datetime.now().strftime('%Y-%m-%d')\n",
+    "            markAttendance(name, current_date)\n",
     "\n",
     "    cv2.imshow('Attendance', img)\n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
