--- a/training.ipynb
+++ b/training.ipynb
@@ -52,7 +52,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "class ['Dorothi', 'Popeye', 'Snigdha']\n"
+      "class ['Ayeshi', 'Dorothi', 'Popeye', 'Snigdha']\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Dorothi', 'Popeye', 'Snigdha']\n"
+      "['Ayeshi', 'Dorothi', 'Popeye', 'Snigdha']\n"
      ]
     }
    ],
@@ -129,14 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "4\n"
      ]
     }
    ],
@@ -238,13 +238,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "POPEYE\n",
+      "POPEYE\n",
+      "POPEYE\n",
+      "POPEYE\n",
+      "POPEYE\n",
+      "POPEYE\n",
       "POPEYE\n",
       "POPEYE\n",
       "POPEYE\n",
@@ -259,7 +265,7 @@
     "while True:\n",
     "    success, img = cap.read()\n",
     "\n",
-    "    imgS = cv2.resize(img,(0,0), None, 0.25, 0.25)\n",
+    "    imgS = cv2.resize(img,(0,0), None, 1, 1)\n",
     "    imgS = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
     "\n",
     "    faceCurFrame = face_recognition.face_locations(imgS)\n",
@@ -276,7 +282,7 @@
     "            name = classNames[matchIndex].upper()\n",
     "            print(name)\n",
     "            y1, x2, y2, x1 = faceLoc\n",
-    "            y1, x2, y2, x1 = y1 * 4, x2 * 4, y2 * 4, x1 * 4\n",
+    "            y1, x2, y2, x1 = y1 , x2 , y2 , x1 \n",
     "\n",
     "            cv2.rectangle(img, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
     "            cv2.rectangle(img, (x1, y2 - 35), (x2, y2), (0, 255, 0), cv2.FILLED)\n",
