more people added

--- a/training.ipynb
+++ b/training.ipynb
@@ -52,7 +52,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "class ['Ayeshi', 'Dorothi', 'Popeye', 'Snigdha']\n"
+      "class ['Ayesha', 'bijoy', 'Dorothi', 'Popeye', 'Snigdha']\n"
      ]
     }
    ],
@@ -99,14 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Ayeshi', 'Dorothi', 'Popeye', 'Snigdha']\n"
+      "['Ayesha', 'bijoy', 'Dorothi', 'Popeye', 'Snigdha']\n"
      ]
     }
    ],
@@ -136,7 +136,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "5\n"
      ]
     }
    ],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,15 +238,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "POPEYE\n",
-      "POPEYE\n",
       "POPEYE\n",
       "POPEYE\n",
       "POPEYE\n",
